[gd_scene load_steps=4 format=1]

[ext_resource path="res://Objects/DialogParent.gd" type="Script" id=1]
[ext_resource path="res://Objects/DialogBox.gd" type="Script" id=2]
[ext_resource path="res://Objects/DialogBox_Next.gd" type="Script" id=3]

[node name="DialogBox" type="Polygon2D"]

transform/pos = Vector2( 16, 416 )
polygon = Vector2Array( 0, -64, 0, 48, 608, 48, 608, -64 )
uv = Vector2Array(  )
color = Color( 0.172549, 0.172549, 0.196078, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
script/script = ExtResource( 1 )
DialogSize = Vector2( 608, 112 )

[node name="Text" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = -32.0
margin/right = 576.0
margin/bottom = 16.0
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0
script/script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = true

[node name="Speaker1" type="Polygon2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 16, 0 )
z/z = 1
polygon = Vector2Array( 16, -80, 16, -48, 144, -48, 144, -80 )
uv = Vector2Array(  )
color = Color( 0.113725, 0.113725, 0.145098, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="SpeakerName" type="Label" parent="Speaker1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = -72.0
margin/right = 128.0
margin/bottom = -56.0
text = "JD"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Speaker2" type="Polygon2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 464, 0 )
z/z = 1
polygon = Vector2Array( -16, -80, -16, -48, 112, -48, 112, -80 )
uv = Vector2Array(  )
color = Color( 0.11235, 0.11235, 0.144531, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
__meta__ = {
"_edit_group_": true
}

[node name="SpeakerName" type="Label" parent="Speaker2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -70.0
margin/right = 96.0
margin/bottom = -56.0
text = "JD"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NextIndicator" type="Polygon2D" parent="."]

transform/pos = Vector2( 160.951, 13.3411 )
transform/scale = Vector2( 0.729855, 0.676553 )
polygon = Vector2Array( 576, 16, 592, 16, 584, 32 )
uv = Vector2Array(  )
color = Color( 0.606262, 0.606262, 0.902344, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
script/script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="NextIndicator"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[connection signal="dialog_end" from="Text" to="." method="_on_Text_dialog_end"]

[connection signal="dialog_finished" from="Text" to="." method="_on_Text_dialog_finished"]

[connection signal="timeout" from="Timer" to="Text" method="_on_Timer_timeout"]

[connection signal="timeout" from="NextIndicator/Timer" to="NextIndicator" method="_on_Timer_timeout"]


